src/parser/Parser.js
import Tokenizer from './Tokenizer';
import LookaheadIterator from './LookaheadIterator';
import NewLineCheckIterator from './NewLineCheckIterator';
import * as decls from '../ast/declarations';
import * as _types from '../ast/types';
import * as exprs from '../ast/expressions';
import * as stmts from '../ast/statements';
import ParserError from './ParserError';
import * as mess from './ParserMessages';


const AST = { ...decls, ..._types, ...exprs, ...stmts };

/**
 * Given an arbitrary number of lists of nodes, interleave them, starting with the first item of the first list.
 * Continue filling the combined list with available items from each list until all lists are empty.
 */
function interleave(...lists) {
    const combined = [];
    const max = Math.max(...lists.map(l => l.length));
    for (let i = 0; i < max; ++i) {
        for (const list of lists) if (list[i]) combined.push(list[i]);
    }
    return combined;
}

export default class Parser {
    /**
     * Top-level function.
     * Given some source code string, parse it and return a syntax tree.
     */
    parse(source) {
        // This is a triple-wrapped iterator:
        // 1. the tokenizer yields tokens one at a time
        // 2. the lookahead iterator allows us to peek at succeeding tokens without consuming them
        // 3. the new line check iterator filters new lines and adds a new line flag to each token preceding a new line
        this.tokenizer = new NewLineCheckIterator(new LookaheadIterator(new Tokenizer(source)));
        return this.acceptProgram();
    }

    // COMMON UTIL FUNCTIONS

    /**
     * Using the next token as a starting point, use the 'parseFunc' to attempt to parse a tree node
     * from the input. Throw 'message' if the parse fails.
     */
    parseNextToken(parseFunc, message) {
        if (this.tokenizer.peek().type === 'EOF') return false;
        const token = this.tokenizer.next().value;
        const parsed = parseFunc(token);
        if (!parsed && message) throw new ParserError(message, token.line, token.column);
        return parsed;
    }

    /**
     * Get the next token, expecting it to be of type 'type',
     * throwing an error with message 'message' if it is not.
     */
    expectNextToken(type, message) {
        const token = this.tokenizer.next().value;
        this.enforceTokenType(token, type, message);
        return token.type === type ? token : false;
    }

    /**
     * Check if the token is of the specified type,
     * throwing an error with the specified message if it is not.
     */
    enforceTokenType(token, type, message) {
        if (token.type !== type && message) {
            const formatted = (typeof message === 'function') ? message(token) : message;
            throw new ParserError(formatted, token.line, token.column);
        }
    }

    /**
     * Check if the token has a new line after it,
     * throwing an error with the specified message if it is not.
     */
    enforceNewLine(token, message) {
        if (!token.hasNewLine) throw new ParserError(message, token.line, token.column + token.image.length - 1);
    }

    // PARSER FUNCTIONS

    /**
     * Top-level AST node.
     *
     * Program ::= ImportDeclaration* (FunctionDeclaration | TypeDeclaration | ExportDeclaration)* EOF
     */
    acceptProgram() {
        const imports = [], functions = [], types = [], exports = [], children = [];
        for (const c of this.tokenizer) {
            let node;
            if (node = this.acceptImportDeclaration(c)) {
                if (functions.length || types.length) throw new ParserError(mess.IMPORT_AFTER_DECL, node.line, node.column);
                imports.push(node);
                children.push(node);
            } else if (node = this.acceptFunctionDeclaration(c)) {
                functions.push(node);
                children.push(node);
            } else if (node = this.acceptTypeDeclaration(c)) {
                types.push(node);
                children.push(node);
            } else if (node = this.acceptExportDeclaration(c)) {
                exports.push(node);
                children.push(node);
            } else if (c.type === 'EOF') {
                children.push(c);
                return new AST.Program({ imports, functions, types, exports }, children);
            } else {
                throw new ParserError(mess.INVALID_PROGRAM(c), c.line, c.column);
            }
        }
        // empty program
        throw new ParserError(mess.EMPTY_FILE, 1, 1);
    }

    /**
     * ImportDeclaration ::= IMPORT FROM STRING_LITERAL COLON IDENT
     *                       IMPORT FROM STRING_LITERAL LBRACE ImportComponent (COMMA ImportComponent)* RBRACE
     */
    acceptImportDeclaration(tok) {
        if (tok.type !== 'IMPORT') return false;
        const fromToken = this.expectNextToken('FROM', mess.INVALID_IMPORT);
        const moduleNameToken = this.expectNextToken('STRING_LITERAL', mess.INVALID_IMPORT_MODULE);

        const next = this.tokenizer.next().value;
        if (next.type === 'COLON') {
            // default import
            const defaultImportNameToken = this.expectNextToken('IDENT', mess.INVALID_IMPORT);
            this.enforceNewLine(defaultImportNameToken, mess.IMPORT_NO_NEW_LINE);
            return new AST.ImportDeclaration({
                importToken: tok,
                fromToken,
                moduleNameToken,
                colonToken: next,
                defaultImportNameToken,
                defaultImport: true,
            }, [tok, fromToken, moduleNameToken, next, defaultImportNameToken]);
        } else if (next.type === 'LBRACE') {
            // named imports
            const importComponents = [], commaTokens = [];
            importComponents.push(this.parseNextToken(t => this.acceptImportComponent(t), mess.INVALID_IMPORT));
            let namedImportCloseBraceToken = this.tokenizer.next().value;
            while (namedImportCloseBraceToken.type === 'COMMA') {
                commaTokens.push(namedImportCloseBraceToken);
                importComponents.push(this.parseNextToken(t => this.acceptImportComponent(t), mess.INVALID_IMPORT));
                namedImportCloseBraceToken = this.tokenizer.next().value;
            }
            this.enforceTokenType(namedImportCloseBraceToken, 'RBRACE', mess.INVALID_IMPORT);
            this.enforceNewLine(namedImportCloseBraceToken, mess.IMPORT_NO_NEW_LINE);
            return new AST.ImportDeclaration({
                importToken: tok,
                fromToken,
                moduleNameToken,
                namedImportOpenBraceToken: next,
                importComponents,
                commaTokens,
                namedImportCloseBraceToken,
                defaultImport: false,
            }, [tok, fromToken, moduleNameToken, next, ...interleave(importComponents, commaTokens), namedImportCloseBraceToken]);
        } else {
            throw new ParserError(mess.INVALID_IMPORT, next.line, next.column);
        }
    }

    /**
     * ImportComponent ::= IDENT
     *                     IDENT AS IDENT
     */
    acceptImportComponent(tok) {
        if (tok.type !== 'IDENT') return false;
        if (this.tokenizer.peek().type === 'AS') {
            const asToken = this.tokenizer.next().value;
            const importAliasToken = this.expectNextToken('IDENT', mess.INVALID_IMPORT);
            return new AST.ImportComponent({
                importNameToken: tok,
                asToken,
                importAliasToken,
            }, [tok, asToken, importAliasToken]);
        } else {
            return new AST.ImportComponent({
                importNameToken: tok,
            }, [tok]);
        }
    }

    /**
     * FunctionDeclaration ::= FUNC Type IDENT ParameterList FAT_ARROW (Expression | Block)
     */
    acceptFunctionDeclaration(tok) {
        if (tok.type !== 'FUNC') return false;
        const returnType = this.parseNextToken(t => this.acceptType(t), mess.INVALID_RETURN_TYPE);
        const functionNameToken = this.expectNextToken('IDENT', mess.INVALID_FUNCTION_NAME);
        const params = this.parseNextToken(t => this.acceptParameterList(t), mess.INVALID_PARAMETER_LIST);
        const fatArrowToken = this.expectNextToken('FAT_ARROW', mess.INVALID_FAT_ARROW);
        const next = this.tokenizer.next().value;
        let functionBody = this.acceptBlock(next);
        if (!functionBody) functionBody = this.acceptExpression(next);
        if (!functionBody) throw new ParserError(mess.INVALID_FUNCTION_BODY, next.line, next.column);
        return new AST.FunctionDeclaration({
            funcToken: tok,
            returnType,
            functionNameToken,
            params,
            fatArrowToken,
            functionBody,
        }, [tok, returnType, functionNameToken, params, fatArrowToken, functionBody]);
    }

    /**
     * TypeDeclaration ::= TYPE IDENT EQUALS Type
     */
    acceptTypeDeclaration(tok) {
        if (tok.type !== 'TYPE') return false;
        const typeNameToken = this.expectNextToken('IDENT', mess.INVALID_TYPE_NAME);
        const equalsToken = this.expectNextToken('EQUALS', mess.TYPE_DECL_MISSING_EQUALS);
        const type = this.parseNextToken(t => this.acceptType(t), mess.INVALID_TYPE);
        return new AST.TypeDeclaration({
            typeToken: tok,
            typeNameToken,
            equalsToken,
            type,
        }, [tok, typeNameToken, equalsToken, type]);
    }

    /**
     * ExportDeclaration ::= EXPORT DEFAULT Expression      -- default export
     *                     | EXPORT IDENT EQUALS Expression -- named inline export
     *                     | EXPORT IDENT EQUALS Type       -- named inline export
     *                     | EXPORT IDENT                   -- named export of already declared name
     */
    acceptExportDeclaration(tok) {
        if (tok.type !== 'EXPORT') return false;
        let next = this.tokenizer.next().value;
        if (next.type === 'DEFAULT') {
            const defaultToken = next;
            let exportedValue;
            next = this.tokenizer.next().value;
            if ((exportedValue = this.acceptFunctionDeclaration(next))
                    || (exportedValue = this.acceptTypeDeclaration(next))
                    || (exportedValue = this.acceptExpression(next))) {
                return new AST.ExportDeclaration({
                    exportToken: tok,
                    defaultToken,
                    exportedValue,
                }, [tok, defaultToken, exportedValue]);
            } else {
                throw new ParserError(mess.INVALID_DEFAULT_EXPORT_VALUE, tok.line, tok.column);
            }
        }
        if (next.type === 'IDENT') {
            const exportName = next;
            next = this.tokenizer.peek();
            if (next.type === 'EQUALS') {
                const equalsToken = this.tokenizer.next().value;
                let exportedValue;
                next = this.tokenizer.next().value;
                if ((exportedValue = this.acceptFunctionDeclaration(next))
                    || (exportedValue = this.acceptTypeDeclaration(next))
                    || (exportedValue = this.acceptExpression(next))) {
                    return new AST.ExportDeclaration({
                        exportToken: tok,
                        exportName,
                        equalsToken,
                        exportedValue,
                    }, [tok, exportName, equalsToken, exportedValue]);
                } else {
                    throw new ParserError(mess.INVALID_NAMED_EXPORT_VALUE, tok.line, tok.column);
                }
            } else {
                this.enforceNewLine(exportName, mess.EXPORT_NO_NEW_LINE);
                return new AST.ExportDeclaration({
                    exportToken: tok,
                    exportName,
                }, [tok, exportName]);
            }
        }
        throw new ParserError(mess.INVALID_EXPORT_DECLARATION);
    }

    /**
     * Type ::= U8 | I8 | BYTE |       # 8-bit integers:  unsigned, signed, unsigned
     *          U16 | I16 | SHORT |    # 16-bit integers: unsigned, signed, unsigned
     *          U32 | I32 | INTEGER |  # 32-bit integers: unsigned, signed, signed
     *          U64 | I64 | LONG |     # 64-bit integers: unsigned, signed, signed
     *          INT |                  # Unbounded integers
     *          F32 | FLOAT |          # 32-bit floating point numbers
     *          F64 | DOUBLE |         # 64-bit floating point numbers
     *          STRING |               # Array of characters
     *          CHAR |                 # UTF-8 Character
     *          BOOL |                 # Boolean value
     *          VOID |                 # No type (alias of ())
     *          (Type LBRACK RBRACK) | # Array types
     *          StructType |           # Structured type
     *          TupleType |            # Tuple type
     *          FunctionType |         # Function type
     *          (LPAREN Type RPAREN) | # Explicitly bounded type
     *          IDENT                  # Already defined type
     */
    acceptType(tok) {
        let typeNode;
        // handle single-token types
        switch (tok.type) {
            case 'U8': case 'I8': case 'BYTE':
            case 'U16': case 'I16': case 'SHORT':
            case 'U32': case 'I32': case 'INTEGER':
            case 'U64': case 'I64': case 'LONG':
            case 'INT':
            case 'F32': case 'FLOAT':
            case 'F64': case 'DOUBLE':
            case 'STRING':
            case 'CHAR':
            case 'BOOL':
            case 'VOID':
                typeNode = new AST.Type({ builtIn: tok }, [tok]);
                break;
            case 'IDENT': typeNode = new AST.Type({ name: tok }, [tok]); break;
            default: break;
        }
        if (!typeNode) {
            // handle more complex types
            let type;
            if (type = this.acceptStructType(tok)) typeNode = new AST.Type({ structType: type }, [type]);
            else if (type = this.acceptFunctionOrTupleType(tok)) {
                if (type instanceof AST.FunctionType) typeNode = new AST.Type({ functionType: type }, [type]);
                else if (type instanceof AST.TupleType) typeNode = new AST.Type({ tupleType: type }, [type]);
                else typeNode = type; // the case of a single type in parentheses just returns a type
            }
            else return false;
        }
        // array types are left recursive
        let [peek1, peek2] = this.tokenizer.peek(0, 2);
        while (peek1.type === 'LBRACK' && peek2.type === 'RBRACK') {
            const [arrayLeftBracketToken, arrayRightBracketToken] = [this.tokenizer.next().value, this.tokenizer.next().value];
            typeNode = new AST.ArrayType({
                baseType: typeNode,
                arrayLeftBracketToken,
                arrayRightBracketToken,
            }, [typeNode, arrayLeftBracketToken, arrayRightBracketToken]);
            [peek1, peek2] = this.tokenizer.peek(0, 2);
        }
        if (typeNode instanceof AST.ArrayType) typeNode = new AST.Type({ arrayType: typeNode }, [typeNode]);
        return typeNode;
    }

    /**
     * ParameterList ::= LPAREN (Param (COMMA Param)*)? RPAREN
     */
    acceptParameterList(tok) {
        if (tok.type !== 'LPAREN') return false;
        let peek = this.tokenizer.peek();
        const params = [], commaTokens = [];
        if (peek.type !== 'RPAREN') {
            // try to parse a parameter
            params.push(this.parseNextToken(t => this.acceptParam(t)));
            while ((peek = this.tokenizer.peek()).type === 'COMMA') {
                commaTokens.push(this.tokenizer.next().value);
                params.push(this.parseNextToken(t => this.acceptParam(t)));
            }
        }
        // close param list
        const closeParenToken = this.expectNextToken('RPAREN', mess.MISSING_CLOSE_PAREN);
        return new AST.ParameterList({
            openParenToken: tok,
            params,
            commaTokens,
            closeParenToken,
        }, [tok, ...interleave(params, commaTokens), closeParenToken]);
    }

    /**
     * Param ::= Type IDENT
     */
    acceptParam(tok) {
        const type = this.acceptType(tok);
        if (!type) throw new ParserError(mess.INVALID_PARAMETER_TYPE, tok.line, tok.column);
        const identifierToken = this.expectNextToken('IDENT', mess.INVALID_PARAMETER_NAME);
        return new AST.Param({
            type,
            identifierToken,
        }, [type, identifierToken]);
    }

    /**
     * Expression ::= INTEGER_LITERAL |
     *                FLOAT_LITERAL |
     *                STRING_LITERAL |
     *                CHARACTER_LITERAL |
     *                IDENT |
     *                ArrayLiteral |
     *                StructLiteral |
     *                TupleLiteral |
     *                FunctionApplication |
     *                UnaryOperation |
     *                BinaryOperation |
     *                VarDeclaration |
     *                FieldAccess |
     *                ArrayAccess |
     *                LambdaExpression |
     *                IfElseExpression |
     *                LPAREN Expression RPAREN
     */
    acceptExpression(tok) {
        let exp;
        let inner;
        // handle non-left-recursive and non-paren first
        // simple 1 token expressions
        switch (tok.type) {
            case 'INTEGER_LITERAL': exp = new AST.Expression({ integerLiteralToken: tok }, [tok]); break;
            case 'FLOAT_LITERAL': exp = new AST.Expression({ floatLiteralToken: tok }, [tok]); break;
            case 'STRING_LITERAL': exp = new AST.Expression({ stringLiteralToken: tok }, [tok]); break;
            case 'CHARACTER_LITERAL': exp = new AST.Expression({ characterLiteralToken: tok }, [tok]); break;
            case 'IDENT': {
                if (inner = this.acceptVarDeclaration(tok)) {
                    exp = new AST.Expression({ varDecl: inner }, [inner]);
                } else if (inner = this.acceptLambdaExpressionOrTupleLiteral(tok)) {
                    exp = new AST.Expression({ lambda: inner }, [inner]);
                } else {
                    exp = new AST.Expression({ identToken: tok }, [tok]);
                }
                break;
            }
            default: break;
        }
        if (!exp) {
            // other literals/expressions
            if (inner = this.acceptArrayLiteral(tok)) {
                exp = new AST.Expression({ arrayLiteral: inner }, [inner]);
            } else if (inner = this.acceptStructLiteral(tok)) {
                exp = new AST.Expression({ structLiteral: inner }, [inner]);
            } else if (inner = this.acceptIfElseExpression(tok)) {
                exp = new AST.Expression({ ifElse: inner }, [inner]);
            } else if (inner = this.acceptPrefixExpression(tok)) {
                exp = new AST.Expression({ unary: inner }, [inner]);
            } else if (tok.type === 'LPAREN') {
                // handle parentheses
                if (inner = this.acceptLambdaExpressionOrTupleLiteral(tok)) {
                    if (inner instanceof AST.LambdaExpression) exp = new AST.Expression({ lambda: inner }, [inner]);
                    else if (inner instanceof AST.TupleLiteral) exp = new AST.Expression({ tupleLiteral: inner }, [inner]);
                    else exp = inner; // just a parenthetical expression
                }
            }
            if (!exp) return false;
        }
        // handle left recursion, expressions that start with an inner expression
        while (this.tokenizer.peek()) {
            let outer;
            if (outer = this.tryFunctionApplication(exp)) {
                exp = new AST.Expression({ functionApplication: outer }, [outer]);
            } else if (outer = this.tryBinaryOrPostfixExpression(exp)) {
                if (outer instanceof AST.BinaryExpression) exp = new AST.Expression({ binary: outer }, [outer]);
                else exp = new AST.Expression({ unary: outer }, [outer]);
            } else if (outer = this.tryFieldAccess(exp)) {
                exp = new AST.Expression({ fieldAccess: outer }, [outer]);
            } else if (outer = this.tryArrayAccess(exp)) {
                exp = new AST.Expression({ arrayAccess: outer }, [outer]);
            } else {
                break;
            }
        }
        return exp;
    }

    /**
     * Block ::= LBRACE Statement* RBRACE |
     *           Statement
     */
    acceptBlock(tok) {
        if (tok.type === 'LBRACE') {
            const statements = [];
            let next = this.tokenizer.next().value;
            while (true) {
                const statement = this.acceptStatement(next);
                if (statement) statements.push(statement);
                else break;
                next = this.tokenizer.next().value;
            }
            this.enforceTokenType(next, 'RBRACE', mess.MISSING_CLOSE_BRACE);
            return new AST.Block({
                openBraceToken: tok,
                statements,
                closeBraceToken: next,
            }, [tok, ...statements, next]);
        }
        const statement = this.acceptStatement(tok);
        if (!statement) return false;
        return new AST.Block({ statement }, [statement]);
    }

    /**
     * StructType ::= LBRACE (Type IDENT)* RBRACE
     */
    acceptStructType(tok) {
        if (tok.type !== 'LBRACE') return false;
        const fieldTypes = [], fieldNameTokens = [];
        while (this.tokenizer.peek().type !== 'RBRACE') {
            fieldTypes.push(this.parseNextToken(t => this.acceptType(t), mess.INVALID_FIELD_TYPE));
            const identToken = this.expectNextToken('IDENT', mess.INVALID_FIELD_NAME);
            this.enforceNewLine(identToken, mess.STRUCT_FIELD_NO_NEW_LINE);
            fieldNameTokens.push(identToken);
        }
        const closeBraceToken = this.tokenizer.next().value;
        return new AST.StructType({
            openBraceToken: tok,
            fieldTypes,
            fieldNameTokens,
            closeBraceToken,
        }, [tok, ...interleave(fieldTypes, fieldNameTokens), closeBraceToken]);
    }

    /**
     * FunctionType ::= LPAREN (Type (COMMA Type)*)? RPAREN FAT_ARROW Type
     * TupleType ::= LPAREN (Type (COMMA Type)*)? RPAREN
     */
    acceptFunctionOrTupleType(tok) {
        // function and tuple types are initially ambiguous, so they need a common parse function
        if (tok.type !== 'LPAREN') return false;
        const types = [], commaTokens = [];
        if (this.tokenizer.peek().type !== 'RPAREN') {
            types.push(this.parseNextToken(t => this.acceptType(t), mess.INVALID_TYPE));
            while (this.tokenizer.peek().type !== 'RPAREN') {
                commaTokens.push(this.expectNextToken('COMMA', mess.FUNCTION_TYPE_MISSING_COMMA));
                types.push(this.parseNextToken(t => this.acceptType(t), mess.INVALID_TYPE));
            }
        }
        const closeParenToken = this.tokenizer.next().value;
        if (this.tokenizer.peek().type !== 'FAT_ARROW') {
            // parse as tuple
            if (types.length === 1) {
                // if there is only one type, it's just a type, not a tuple type
                return new AST.Type({
                    openParenToken: tok,
                    innerType: types[0],
                    closeParenToken,
                }, [tok, types[0], closeParenToken]);
            }
            return new AST.TupleType({
                openParenToken: tok,
                types,
                commaTokens,
                closeParenToken,
            }, [tok, ...interleave(types, commaTokens), closeParenToken]);
        }
        // parse as function
        const fatArrowToken = this.expectNextToken('FAT_ARROW', mess.FUNCTION_TYPE_MISSING_FAT_ARROW);
        const returnType = this.parseNextToken(t => this.acceptType(t), mess.FUNCTION_TYPE_INVALID_RETURN_TYPE);
        return new AST.FunctionType({
            openParenToken: tok,
            paramTypes: types,
            commaTokens,
            closeParenToken,
            fatArrowToken,
            returnType,
        }, [tok, ...interleave(types, commaTokens), closeParenToken, fatArrowToken, returnType]);
    }

    /**
     * VarDeclaration ::= IDENT EQUALS Expression
     */
    acceptVarDeclaration(tok) {
        if (tok.type !== 'IDENT' || this.tokenizer.peek().type !== 'EQUALS') return false;
        const equalsToken = this.expectNextToken('EQUALS', mess.INVALID_VAR_DECLARATION);
        const initialValue = this.parseNextToken(t => this.acceptExpression(t), mess.INVALID_INITIAL_VALUE);
        return new AST.VarDeclaration({
            varIdentToken: tok,
            equalsToken,
            initialValue,
        }, [tok, equalsToken, initialValue]);
    }

    /**
     * LambdaExpression ::= LambdaParamList FAT_ARROW (Expression | Block)
     *
     * So this is interesting.
     * Take the following expressions:
     * - (a)             (parenthetical expression)
     * - (a, b)          (tuple literal)
     * - (a) => exp      (lambda)
     * - (a, b) => exp   (lambda)
     * How do we distinguish between 1 and 3, or 2 and 4?
     * Initially, tuples are more free than lambdas. They can contain any expression as opposed to just identifiers.
     * This means that we need to check for a tuple first, which coincidentally also checks for parenthetical expressions.
     * If that comes back as matched, and the next token is a fat arrow, one of four things could happen:
     * 1. It is a parenthetical expression whose inner expression is an identifier, in which case we parse as a lambda expression.
     * 2. It is any other parenthetical expression, in which case it is returned as an expression.
     * 3. It is a tuple where all contained expressions are identifiers, in which case we parse as a lambda expression.
     * 4. It is any other tuple, in which case it is returned as a tuple.
     * If it does not match either a tuple or an expression, then we proceed with the lambda parse starting with the param list.
     */
    acceptLambdaExpressionOrTupleLiteral(tok) {
        const tuple = this.acceptTupleLiteral(tok);
        let paramList;
        if (tuple) {
            if (this.tokenizer.peek().type !== 'FAT_ARROW') return tuple;
            // this *can* be a lambda expression, check it
            if (tuple instanceof AST.Expression && tuple.innerExpression.identToken) {
                const param = new AST.LambdaParam({ identifierToken: tuple.innerExpression.identToken }, [tuple.innerExpression.identToken]);
                paramList = new AST.LambdaParamList({
                    openParenToken: tuple.openParenToken,
                    params: [param],
                    commaTokens: [],
                    closeParenToken: tuple.closeParenToken,
                }, [tuple.openParenToken, param, tuple.closeParenToken]);
            } else if (tuple instanceof AST.TupleLiteral && tuple.items.every(i => i.identToken)) {
                const params = tuple.items.map(i => new AST.LambdaParam({ identifierToken: i.identToken }, [i.identToken]));
                paramList = new AST.LambdaParamList({
                    openParenToken: tuple.openParenToken,
                    params,
                    commaTokens: tuple.commaTokens,
                    closeParenToken: tuple.closeParenToken,
                }, [tuple.openParenToken, ...interleave(params, tuple.commaTokens), tuple.closeParenToken]);
            } else return tuple;
        }
        // not a tuple literal, might be a single implicit param
        if (!paramList) paramList = this.acceptLambdaParamList(tok);
        if (!paramList) return false;
        // if there is only one parameter and it is non-parenthesized, it could still be something else
        if (paramList.children.length === 1 && this.tokenizer.peek().type !== 'FAT_ARROW') return false;
        const fatArrowToken = this.expectNextToken('FAT_ARROW', mess.INVALID_LAMBDA_EXPRESSION_MISSING_FAT_ARROW);
        const next = this.tokenizer.next().value;
        let body = this.acceptBlock(next);
        if (!body) body = this.acceptExpression(next);
        if (!body) throw new ParserError(mess.INVALID_LAMBDA_EXPRESSION_BODY, next.line, next.column);
        return new AST.LambdaExpression({ paramList, fatArrowToken, body }, [paramList, fatArrowToken, body]);
    }
